# pyqasm

./: .gitattributes  .gitignore  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  asv.conf.json  index.json  info.json  mypy.ini  pyproject.toml  regressions.json  regressions.xml  setup.py  tox.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  discussion.yml
.github/workflows/: bump-version.yml  docs.yml  format.yml  gh-pages.yml  logo-check.yml  main.yml  pr-compliance.yml  pre-release.yml  publish.yaml  release.yml  test-release.yml
benchmarks/: README.md  bench_evolved.json  bench_simulator.py  plot_benchmarks.py  profile_simulator.py
docs/: conf.py  gate_decompositions.md  index.rst
docs/api/: pyqasm.rst  pyqasm.simulator.rst
docs/stubs/: pyqasm.PyQasmError.rst  pyqasm.ValidationError.rst  pyqasm.unroll.rst  pyqasm.validate.rst
examples/: README.md  pulse_unroll_example.py  unroll_example.py  validate_example.py
graphs/summary/: import.PyqasmImport.time_pyqasm_import.json  openpulse.Openpulse.time_openpulse.json  pyqasm_functions.PyqasmFunctions.time_draw.json  pyqasm_functions.PyqasmFunctions.time_dump.json  pyqasm_functions.PyqasmFunctions.time_dumps.json  pyqasm_functions.PyqasmFunctions.time_load.json  unroll.Unrolling.time_qubit_reg_consolidation.json  unroll.Unrolling.time_unroll.json  validate.Validate.time_validate.json
pyqasm/: README.md  __init__.py  _version.py  analyzer.py  elements.py  entrypoint.py  exceptions.py  expressions.py  linalg.py  linalg_cy.pyx  maps.py  modules.py  subroutines.py  transformer.py  unroller.py  validate.py  validator.py  visitor.py
pyqasm/modules/: base.py  qasm2.py  qasm3.py
src/: README.md  solovay_kitaev.py
src/pyqasm/: __init__.py  _logging.py  _version.py  analyzer.py  decomposer.py  elements.py  entrypoint.py  exceptions.py  expressions.py  linalg.py  linalg_cy.pyx  maps.py  openpulse_visitor.py  preprocess.py  printer.py  scope.py  scope_manager.py  subroutines.py  transformer.py  validator.py  visitor.py
src/pyqasm/accelerate/: __init__.py  linalg.pyx  sv_sim.pyx
src/pyqasm/algorithms/: __init__.py
src/pyqasm/algorithms/solovay_kitaev/: __init__.py  basic_approximation.py  gc_decompose.py  generator.py  optimizer.py  solovay_kitaev.py  testing.ipynb  utils.py
src/pyqasm/algorithms/solovay_kitaev/cache/: clifford-t_depth-5.pkl
src/pyqasm/algorithms/solovay_kitaev/experimental/: basic_approximation_traversal.py  testing_time.py
src/pyqasm/cli/: main.py  unroll.py  utils.py  validate.py
src/pyqasm/maps/: __init__.py  constants.py  decomposition_rules.py  expressions.py  gates.py  solovay-kitaev.py
src/pyqasm/modules/: __init__.py  base.py  qasm2.py  qasm3.py
src/pyqasm/pulse/: expressions.py  frame.py  openpulse_visitor.py  play.py  utils.py  validator.py  visitor.py  waveform.py
src/pyqasm/simulator/: __init__.py  braket-sv.py  statevector.py
tests/: conftest.py  test.py  test_alias.py  test_barrier.py  test_expressions.py  test_gates.py  test_if.py  test_include.py  test_linalg.py  test_loop.py  test_measurement.py  test_mpl_draw.py  test_perf_regression.py  test_reset.py  test_sizeof.py  test_sv_sim.py  test_sv_sim_core.py  test_switch.py  utils.py
tests/benchmarks/: benchmarks.py  import.py  openpulse.py  pyqasm_functions.py  unroll.py  validate.py
tests/benchmarks/qasm/: benchmark_downloader.py  benchmark_metadata.json  neutral_atom_gate.qasm
tests/cli/: test_cli_commands.py  test_unroll_cli_commands.py
tests/cli/resources/: invalid1.qasm  valid1.qasm  valid2.qasm
tests/declarations/: test_classical.py  test_quantum.py
tests/profiles/: README.md
tests/profiles/openpulse/: profile_openpulse.speedscope.json
tests/profiles/qreg_consolidation/: profile_qreg_consolidation.speedscope.json
tests/profiles/unroll/: profile_unroll.speedscope.json
tests/profiles/validate/: profile_validate.speedscope.json
tests/pulse/: test_import.py
tests/qasm2/: test_declarations.py  test_depth.py  test_format.py  test_operations.py  test_rotation_gates.py  test_to_qasm3.py
tests/qasm3/: conftest.py  test_alias.py  test_barrier.py  test_box.py  test_delay.py  test_depth.py  test_device_qubits.py  test_entrypoint.py  test_expressions.py  test_format.py  test_gates.py  test_if.py  test_loop.py  test_measurement.py  test_merge.py  test_preprocess.py  test_printer.py  test_rebase.py  test_reset.py  test_sizeof.py  test_switch.py  test_transformations.py  test_version.py  test_while.py
tests/qasm3/declarations/: test_classical.py  test_quantum.py
tests/qasm3/openpulse/: test_general.py  test_pulse.py  test_pulse_examples.py  test_waveform.py
tests/qasm3/resources/: gates.py  subroutines.py  variables.py
tests/qasm3/resources/qasm/: custom_gate_complex.qasm  custom_gates.inc  include_custom_gates.qasm  include_gates_and_vars.qasm
tests/qasm3/resources/qasm/custom_include/: circular_import.qasm  custom_gate_def.qasm  custom_gates.inc  nested.inc  (+23 more)
tests/qasm3/subroutines/: test_subroutines.py  test_subroutines_arrays.py
tests/resources/: gates.py  subroutines.py  variables.py
tests/subroutines/: test_subroutines.py  test_subroutines_arrays.py
tests/visualization/: test_compare.py  test_mpl_draw.py
tools/: stamp_dev_version.sh
(+10 files in other folders)
