[build-system]
requires = ["setuptools>=74.1", "setuptools_scm", "Cython>=3.0", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "pyqasm"
version = "0.1.0"
description = "Python toolkit providing an OpenQASM 3 semantic analyzer and utilities for program analysis and compilation."
authors = [{name = "qBraid Development Team"}, {email = "contact@qbraid.com"}]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["quantum", "openqasm", "symantic-analyzer", "compiler", "qbraid"]
license = {text = "GNU General Public License v3.0"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
dependencies = ["numpy", "openqasm3[parser]>=1.0.0,<2.0.0"]

[project.urls]
"Source Code" = "https://github.com/qBraid/pyqasm"
"Bug Tracker" = "https://github.com/qBraid/pyqasm/issues"

[project.optional-dependencies]
cli = ["typer>=0.12.1", "rich>=10.11.0", "typing-extensions"]
test = ["pytest", "pytest-cov"]
lint = ["black", "isort", "pylint", "mypy", "qbraid-cli>=0.8.5"]
docs = ["sphinx>=7.3.7,<8.2.0", "sphinx-autodoc-typehints>=1.24,<2.6", "sphinx-rtd-theme>=2.0.0,<4.0.0", "docutils<0.22", "sphinx-copybutton"]

[tool.setuptools_scm]
write_to = "src/pyqasm/_version.py"

[tool.setuptools.package-data]
pyqasm = ["py.typed", "*.pyx"]

[tool.setuptools]
packages = {find = {where = ["src"]}}
ext-modules = [
  {name = "pyqasm.accelerate.linalg", sources = ["src/pyqasm/accelerate/linalg.pyx"], include-dirs = ["numpy"]}
]

[project.scripts]
pyqasm = "pyqasm.cli.main:app"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
source = ["pyqasm"]
omit = ["**/pyqasm/_version.py"]
relative_files = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
  "raise NotImplementedError",
  "return NotImplemented",
  "def __repr__",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "logger.debug",
  "logger.info",
  "__all__",
  "def __getattr__",
  "def __dir__",
  "# pragma: no cover"
]